--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <!doctype html>
+
 <html>
 
-<head>
-    <title>Assignment1</title>
-    <script src="p5.min copy.js"></script>
-    <script src="sketch.js"></script>
-
-<body>
-
-</body>
-
-</head>
-
-
-
+    <head>
+        <title>Assignment1</title>
+        <script src="p5.min.js"></script>
+        <script src="sketch.js"></script>
+    </head>
 
 
 </html>
-
-</1doctype>
